--- a/app/templates/home-page.hbs
+++ b/app/templates/home-page.hbs
@@ -1,7 +1,7 @@
 
 <div class="home-page-container">
- 
-  {{home.home-page-component}}
-  {{top-bar.nav-bar-control showLeftMenu=false}}
+
+  {{home/home-page-component}}
+  {{top-bar/nav-bar-control showLeftMenu=false}}
 
 </div>
