--- a/app/templates/community.hbs
+++ b/app/templates/community.hbs
@@ -1,10 +1,7 @@
 
 <div class="community-container">
-    {{top-bar.nav-bar-control}}
-    {{community.community-fixed-background}}
-    {{community.community-detail-content}}
-    
+    {{top-bar/nav-bar-control}}
+    {{community/community-fixed-background}}
+    {{community/community-detail-content}}
+
 </div>
-
-
-
