--- a/app/templates/components/knowledge/knowledge-detail-content.hbs
+++ b/app/templates/components/knowledge/knowledge-detail-content.hbs
@@ -1,10 +1,10 @@
 <div class="knowledge-detail-content">
         <div class="background-over-container"> </div>
-                {{knowledge.knowledge-advantage-container}}
-                {{knowledge.knowledge-events-container}}
-                {{knowledge.knowledge-opnion-header-container}}
-                {{knowledge.knowledge-opnion-container}}
-                {{bottom-bar.bottom-bar backgroundColor="#AC0049"}}
+                {{knowledge/knowledge-advantage-container}}
+                {{knowledge/knowledge-events-container}}
+                {{knowledge/knowledge-opnion-header-container}}
+                {{knowledge/knowledge-opnion-container}}
+                {{bottom-bar/bottom-bar backgroundColor="#AC0049"}}
         <div class="background-over-container"> </div>
 
 </div>
