--- a/app/templates/components/work-space/work-space-types-spaces-container.hbs
+++ b/app/templates/components/work-space/work-space-types-spaces-container.hbs
@@ -1,6 +1,6 @@
 <div class="work-space-types-spaces-container" id="work-space-container">
 
-    {{work-space.work-space-type-spaces-content-item 
+    {{work-space/work-space-type-spaces-content-item 
         titleImageSrc="/assets/images/work_space_title_house.png" 
         headerImageSrc="/assets/images/work-space-house.jpg"
         description="Foi inspirada nas empresas do Vale do Silício e projetada para atender startups e outras concepções disruptivas voltadas para inovação. O ambiente +55Lab.House é considerado ideal para empresas da economia criativa e colaborativa e também para aquelas que buscam instalações mais despojadas. Trabalhar sentado à beira da piscina ou na área de descompressão torna o bate-papo mais descontraído e cria o ambiente ideal para o surgimento espontâneo de novas ideias."  
@@ -13,7 +13,7 @@
         didSelectPlanCallback=(action "didSelectPlanCallback")
     }}
 
-    {{work-space.work-space-type-spaces-content-item 
+    {{work-space/work-space-type-spaces-content-item 
         titleImageSrc="/assets/images/work_space_title_store.png" 
         headerImageSrc="/assets/images/work-space-store.jpg"
         description="Este ambiente foi planejado pensando em quem precisa comercializar produtos diferenciados. O +55Lab.Store é uma combinação de showroom, co-kitchen e espaço de trabalho e experiências. Aqui é o ecossistema ideal para empreendedores da economia criativa e do empreendedorismo de lifestyle. Tá afim de expor seu trabalho ou produtos do seu e-commerce? Tá precisando de um espaço descolado para trabalhar ou promover um evento? O .Store com certeza é o que você está procurando." 
@@ -27,7 +27,7 @@
 
     }}
 
-    {{work-space.work-space-type-spaces-content-item 
+    {{work-space/work-space-type-spaces-content-item 
         titleImageSrc="/assets/images/work_space_title_work.png" 
         headerImageSrc="/assets/images/work-space-work.jpg"
         description="Espaços de trabalho desenhados com foco em produtividade, estilo, flexibilidade e compartilhamento. De estações de trabalho individuais a salas privativas para times maiores que 10 pessoas, salas de reuniões e eventos, suporte de serviços administrativos, o +55Lab.Work atende aqueles que buscam flexibilidade, conforto e possibilidade de focar 100% no próprio negócio.Uma ótima opção para empresas que estão entrando no mercado local e querem estar nos centros empresariais de suas cidades."
