--- a/app/templates/knowledge.hbs
+++ b/app/templates/knowledge.hbs
@@ -1,11 +1,8 @@
 
 <div class="knowledge-container">
-      {{top-bar.nav-bar-control}}
-     {{knowledge.knowledge-fixed-background}}
-     {{knowledge.knowledge-detail-content}} 
-     
+      {{top-bar/nav-bar-control}}
+     {{knowledge/knowledge-fixed-background}}
+     {{knowledge/knowledge-detail-content}} 
+
 
 </div>
-
-
-
